Add a way to create a build without audio to cut down on file size